HMSS-93: Implement ai_predictions endpoints  (#5)
* HMSS-93 ai prediction basic endpoint logics 

* HMSS-93 utils
